--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,74 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.contenedor{
+    display: flex;
+    flex-direction: row;
+}
+.timer{
+    
+    width: 200px;
+    height: 700px;
+    background-color: rgb(86, 217, 226);
+    
+
+}
+.box1{
+    width:100px;
+    height: 75px;
+    background-color: #d1d4d6ce;
+    margin-bottom: 10px;
+    text-align: center;
+}
+.box2{
+    width:100px;
+    height: 75px;
+    background-color: #d1d4d6ce;
+    text-align: center;
+    margin-bottom: 10px;
+    
+
+}
+.box3{
+    width:100px;
+    height: 75px;
+    background-color: #d1d4d6ce;
+    margin-bottom: 10px;
+    text-align: center;
+
+
+}
+.box4{
+    width:100px;
+    height: 75px;
+    background-color: #d1d4d6ce;
+    margin-bottom: 10px;
+    text-align: center;
+
+
+}
+.box5{
+    width:100px;
+    height: 75px;
+    background-color: #d1d4d6ce;
+    margin-bottom: 10px;
+    text-align: center;
+
+
+}
+.box6{
+    width:100px;
+    height: 75px;
+    background-color: #d1d4d6ce;
+    margin-bottom: 10px;
+    text-align: center;
+
+}
+.reloj{
+    width:100px;
+    height: 75px;
+    background-color: #d1d4d6ce;
+    margin-bottom: 10px;
+    text-align: center;
+
+}
