--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,3 @@
-
 /* 
 
     You can write your own styles here...
@@ -10,74 +9,34 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
-.contenedor{
-    display: flex;
-    flex-direction: row;
-}
-.timer{
-    
-    width: 200px;
-    height: 700px;
-    background-color: rgb(86, 217, 226);
-    
+.contenedor {
+  background-color: rgb(253, 253, 252);
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
-.box1{
-    width:100px;
-    height: 75px;
-    background-color: #d1d4d6ce;
-    margin-bottom: 10px;
-    text-align: center;
-}
-.box2{
-    width:100px;
-    height: 75px;
-    background-color: #d1d4d6ce;
-    text-align: center;
-    margin-bottom: 10px;
-    
+.timer {
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  background-color: #666;
 
 }
-.box3{
-    width:100px;
-    height: 75px;
-    background-color: #d1d4d6ce;
-    margin-bottom: 10px;
-    text-align: center;
-
-
-}
-.box4{
-    width:100px;
-    height: 75px;
-    background-color: #d1d4d6ce;
-    margin-bottom: 10px;
-    text-align: center;
-
-
-}
-.box5{
-    width:100px;
-    height: 75px;
-    background-color: #d1d4d6ce;
-    margin-bottom: 10px;
-    text-align: center;
-
-
-}
-.box6{
-    width:100px;
-    height: 75px;
-    background-color: #d1d4d6ce;
-    margin-bottom: 10px;
-    text-align: center;
-
-}
-.reloj{
-    width:100px;
-    height: 75px;
-    background-color: #d1d4d6ce;
-    margin-bottom: 10px;
-    text-align: center;
-
+.box {
+    margin: 5px;
+    border-radius: 5px;
+    font-weight: bold;
+    color: #ffff;
+  display: flex;
+  width: 60px;
+  height: 80px;
+  font-size: 40px;
+  background-color: #504e4ece;
+  align-items: center;
+  justify-content: center;
+  align-items: center;
 }
